Fixed message list avatar clipping

--- a/app/components/message-list/message-list.scss
+++ b/app/components/message-list/message-list.scss
@@ -12,6 +12,7 @@
 
 .toc-message {
   border: 0;
+  background-color: transparent;
   padding-right: 72px;
   min-height: unset;
   .toc-message-content {
